--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCES
     widgets/DecompilerWidget.cpp
     widgets/VisualNavbar.cpp
     widgets/GraphView.cpp
+    dialogs/bindiff/BinDiffDialog.cpp
     dialogs/preferences/PreferencesDialog.cpp
     dialogs/preferences/AppearanceOptionsWidget.cpp
     dialogs/preferences/GraphOptionsWidget.cpp
@@ -205,6 +206,7 @@ set(HEADER_FILES
     widgets/DecompilerWidget.h
     widgets/VisualNavbar.h
     widgets/GraphView.h
+    dialogs/bindiff/BinDiffDialog.h
     dialogs/preferences/PreferencesDialog.h
     dialogs/preferences/AppearanceOptionsWidget.h
     dialogs/preferences/PreferenceCategory.h
@@ -333,6 +335,7 @@ set(UI_FILES
     widgets/FlagsWidget.ui
     widgets/StringsWidget.ui
     widgets/HexdumpWidget.ui
+    dialogs/bindiff/BinDiffDialog.ui
     dialogs/preferences/PreferencesDialog.ui
     dialogs/preferences/AppearanceOptionsWidget.ui
     dialogs/preferences/GraphOptionsWidget.ui
