--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - dev
     - stable
+    - whola-Ubuntu_workflow_to_20.04
     tags:
     - v*
     - upload-test*
@@ -21,50 +22,50 @@ jobs:
     strategy:
       matrix:
         name: [
-            linux-x86_64,
-            linux-x86_64-system-deps,
-            linux-x86_64-qt6-system-deps,
-            macos-x86_64,
-            windows-x86_64,
-            tarball
+            linux-x86_64
+            # linux-x86_64-system-deps,
+            # linux-x86_64-qt6-system-deps,
+            # macos-x86_64,
+            # windows-x86_64,
+            # tarball
         ]
         include:
-          - name: windows-x86_64
-            os: windows-2019
-            package: true
-            system-deps: false
-            python-version: 3.7.x
-          - name: linux-x86_64-system-deps # ensure that Cutter can be built at least in basic config on Ubuntu 18.04 using sytem libraries
-            os: ubuntu-18.04
-            python-version: 3.6.x
-            system-deps: true
-            cc-override: '/usr/bin/gcc-7'
-            cxx-override: '/usr/bin/g++-7'
-          - name: linux-x86_64-qt6-system-deps # ensure that Cutter can be built at least in basic config on Ubuntu 22.04 using sytem libraries
-            os: ubuntu-22.04
-            python-version: 3.10.x
-            system-deps: true
-            cc-override: '/usr/bin/gcc-12'
-            cxx-override: '/usr/bin/g++-12'
+          # - name: windows-x86_64
+          #   os: windows-2019
+          #   package: true
+          #   system-deps: false
+          #   python-version: 3.7.x
+          # - name: linux-x86_64-system-deps # ensure that Cutter can be built at least in basic config on Ubuntu 18.04 using sytem libraries
+          #   os: ubuntu-20.04
+          #   python-version: 3.6.x
+          #   system-deps: true
+          #   cc-override: '/usr/bin/gcc-7'
+          #   cxx-override: '/usr/bin/g++-7'
+          # - name: linux-x86_64-qt6-system-deps # ensure that Cutter can be built at least in basic config on Ubuntu 22.04 using sytem libraries
+          #   os: ubuntu-22.04
+          #   python-version: 3.10.x
+          #   system-deps: true
+          #   cc-override: '/usr/bin/gcc-12'
+          #   cxx-override: '/usr/bin/g++-12'
           - name: linux-x86_64
-            os: ubuntu-18.04
-            python-version: 3.7.x
-            system-deps: false
-            package: true
-            cc-override: default
-            cxx-override: default
-          - name: macos-x86_64
-            os: macos-latest
-            python-version: 3.7.x
-            system-deps: false
-            package: true
-            cc-override: default
-            cxx-override: default
-          - name: tarball
-            python-version: 3.7.x
             os: ubuntu-20.04
+            python-version: 3.7.x
             system-deps: false
-            tarball: true
+            package: true
+            cc-override: default
+            cxx-override: default
+          # - name: macos-x86_64
+          #   os: macos-latest
+          #   python-version: 3.7.x
+          #   system-deps: false
+          #   package: true
+          #   cc-override: default
+          #   cxx-override: default
+          # - name: tarball
+          #   python-version: 3.7.x
+          #   os: ubuntu-20.04
+          #   system-deps: false
+          #   tarball: true
       # Prevent one job from pausing the rest
       fail-fast: false
     steps:
@@ -77,12 +78,12 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install libgraphviz-dev mesa-common-dev libxkbcommon-x11-dev ninja-build
-        if [[ "${{ matrix.os }}" = "ubuntu-18.04" || "${{ matrix.os }}" = "ubuntu-20.04" ]]
+        if [[ "${{ matrix.os }}" = "ubuntu-20.04" ]]
         then
           # install additional packages needed for appimage
           sudo apt-get install libxcb1-dev libxkbcommon-dev libxcb-*-dev libegl1 libclang-8-dev llvm-8
         fi
-        if [[ "${{ matrix.os }}" = "ubuntu-18.04" && "${{ matrix.system-deps }}" = "true" ]]
+        if [[ "${{ matrix.os }}" = "ubuntu-20.04" && "${{ matrix.system-deps }}" = "true" ]]
         then
           sudo apt-get install qt5-default libqt5svg5-dev qttools5-dev qttools5-dev-tools
         fi
@@ -118,6 +119,8 @@ jobs:
     - name: cmake ubuntu
       if: contains(matrix.os, 'ubuntu')
       run: |
+        curl -LO http://archive.ubuntu.com/ubuntu/pool/main/libf/libffi/libffi6_3.2.1-8_amd64.deb
+        sudo dpkg -i libffi6_3.2.1-8_amd64.deb
         if [[ "${{ matrix.system-deps }}" = "false" ]]
         then
           scripts/fetch_deps.sh
@@ -183,15 +186,29 @@ jobs:
           APP_PREFIX=`pwd`/appdir/usr
           export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$APP_PREFIX/lib/rizin/plugins"
           export PATH=$PATH:${APP_PREFIX}/bin
-          wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
-          chmod a+x linuxdeployqt*.AppImage
+
+          echo "finding libffi.so.6"
+          sudo find / -name libffi.so.6> 2>/dev/null
+          echo "finding libffi.so.7"
+          sudo find / -name libffi.so.7> 2>/dev/null
+          # echo "finding librz_core.so.0.6"
+          # sudo find / -name librz_core.so.0.6 2>/dev/null
+          
+          echo "paths started"
+          ls -a $APP_PREFIX/lib/rizin/plugins
+          ls -a /home/runner/work/cutter/cutter/build
+          echo "paths ended"
+          env
+
+          wget -c "https://github.com/linuxdeploy/linuxdeploy/releases/download/1-alpha-20220822-1/linuxdeploy-x86_64.AppImage"
+          chmod a+x linuxdeploy*.AppImage
           rm -fv "../cutter-deps/qt/plugins/imageformats/libqjp2.so"
-          ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop \
-            -executable=./appdir/usr/bin/python3 \
-            -appimage \
-            -no-strip -exclude-libs=libnss3.so,libnssutil3.so,libqjp2.so \
-            -ignore-glob=usr/lib/python3.9/**/* \
-            -verbose=2
+
+          ./linuxdeploy-x86_64.AppImage \
+            --appdir=appdir \
+            --exclude-library=libnss3.so,libnssutil3.so,libqjp2.so,./appdir/usr/lib/python3.9/**/* \
+            --desktop-file=./appdir/usr/share/applications/*.desktop
+
           find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
           export APPIMAGE_FILE="Cutter-${PACKAGE_ID}-Linux-x86_64.AppImage"
           mv Cutter-*-x86_64.AppImage "$APPIMAGE_FILE"
